--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </section>
         <section class="order">
             <div class="order-container container">
-                <h class="order-title site-heding">LevelUp</h>
+                <h2 class="order-title site-heding">LevelUp</h2>
                 <div id="order-time" class=" order-time">
                     <div class="order-time-number">
                         <span class="hours order-time-time"></span>
