--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="effects "></div>
-        <video src="/img/pexels-kelly-lacy-7353112.mp4"  autoplay muted loop ></video>
+        <video src="img/pexels-kelly-lacy-7353112.mp4"  autoplay muted loop ></video>
         <div class="header-container container">
             <h1 class="header-title">LevelUp</h1>
             <div class="header-content">
@@ -176,7 +176,7 @@
                         </form>
                     </div>
                     <div class="order-form-img">
-                        <div class="form-img"><img src="/img/prod.png" alt=""></div>
+                        <div class="form-img"><img src="img/prod.png" alt=""></div>
                         <div class="form-price">
                           <span class="form-price-new">2 699 р.</span>
                           <span class="form-price-old">3 200 р.</span>
